--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+"homepage": "homepage": "https://divyakathak.github.io",
 {
   "name": "dance-studio",
   "version": "0.1.0",
@@ -13,7 +14,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+
   },
   "browserslist": [
     "last 2 versions",
