--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-"homepage": "homepage": "https://divyakathak.github.io",
+"homepage": "https://divyakathak.github.io",
 {
   "name": "dance-studio",
   "version": "0.1.0",
